--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "devStart": "nodemon Server.js"
   },
-  "keywords": [
+  "keywords": [ 
     "node js",
     "express",
     "jwt",
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "password-validator": "^5.3.0",
